--- a/.taskfiles/kubernetes/Taskfile.yaml
+++ b/.taskfiles/kubernetes/Taskfile.yaml
@@ -1,107 +1,51 @@
 # yaml-language-server: $schema=https://taskfile.dev/schema.json
-version: "3"
+version: '3'
 tasks:
-  delete-failed-pods:
-    desc: Delete all pods with an Evicted/Failed/Succeeded status
-    summary: |
-      CLUSTER: Cluster to run command against (default: main)
-    cmds:
-      - for: ['Evicted', 'Failed', 'Succeeded']
-        cmd: kubectl delete pods --field-selector status.phase={{.ITEM}} -A --ignore-not-found=true
-    vars:
-      CLUSTER: '{{.CLUSTER}}'
-  sync-secrets:
-    desc: Sync ExternalSecret resources from provider
-    summary: |
-      CLUSTER: Cluster to run command against (default: main)
-      NS: Namespace to sync secret in (default: default)
-      SECRET: Secret to sync (default: all secrets)
-    cmd: |
-      {{if eq .SECRET ""}}
-        kubectl get externalsecret --all-namespaces --no-headers -A | awk '{print $1, $2}' \
-          | xargs --max-procs=2 -l bash -c 'kubectl -n $0 annotate externalsecret $1 force-sync=$(date +%s) --overwrite'
-      {{else}}
-        kubectl --namespace {{.NS}} annotate externalsecret {{.SECRET}} force-sync=$(date +%s) --overwrite
-      {{end}}
-    vars:
-      SECRET: '{{ .SECRET | default ""}}'
-      NS: '{{.NS | default "default"}}'
-      CLUSTER: '{{.CLUSTER}}'
-    preconditions:
-      - kubectl --namespace {{.NS}} get externalsecret {{.SECRET}}
-  resources:
-    desc: Gather common resources in your cluster, useful when asking for support
-    cmds:
-      - for: {var: resource}
-        cmd: kubectl get {{.ITEM}} {{.CLI_ARGS | default "-A"}}
-    vars:
-      resource: >-
-        nodes gitrepositories kustomizations helmrepositories helmreleases certificates certificaterequests ingresses pods
-  .reset:
-    internal: true
-    cmd: rm -rf {{.KUBERNETES_DIR}}
   apply-ks:
-    desc: Apply a Flux Kustomization resource for a cluster
-    summary: |
-      CLUSTER: Cluster to run command against (required)
-      PATH: Path to the Flux Kustomization resource from the apps base dir (required, e.g. default/jellyfin)
-      NS: Namespace the Flux Kustomization exists in (default: flux-system)
-    cmd: |
-      flux build ks {{base .PATH}} \
-          --namespace {{.NS}} \
-          --kustomization-file {{.KUBERNETES_DIR}}/{{.CLUSTER}}/apps/{{.PATH}}/ks.yaml \
-          --path {{.KUBERNETES_DIR}}/{{.CLUSTER}}/apps/{{.PATH}} \
-          {{- if contains "not found" .KS }}--dry-run \{{ end }}
-      | \
-      kubectl apply --server-side --field-manager=kustomize-controller -f -
+    desc: Apply a Flux KS for a cluster [CLUSTER=main] [PATH=required]
+    cmd: >
+      flux build --namespace flux-system ks {{base .PATH}} --kustomization-file {{.CLUSTER_DIR}}/apps/{{.PATH}}/ks.yaml --path {{.CLUSTER_DIR}}/apps/{{.PATH}}{{if contains .KUSTOMIZATION "not found"}} --dry-run{{end}} | yq 'with(select(.apiVersion == "kustomize.toolkit.fluxcd.io/v1" and .kind == "Kustomization"); .metadata.namespace = "flux-system")' - | kubectl apply --server-side --field-manager=kustomize-controller --filename -
+
     requires:
-      vars: ['CLUSTER', 'PATH']
+      vars: [CLUSTER, PATH]
     vars:
-      NS: '{{.NS | default "flux-system"}}'
-      KS:
-        sh: flux --namespace {{.NS}} get kustomizations {{base .PATH}} 2>&1
+      KUSTOMIZATION:
+        sh: flux --namespace flux-system get kustomizations {{base .PATH}} 2>&1
     preconditions:
-      - test -f {{.KUBERNETES_DIR}}/{{.CLUSTER}}/apps/{{.PATH}}/ks.yaml
+      - test -f {{.CLUSTER_DIR}}/apps/{{.PATH}}/ks.yaml
+      - which flux kubectl yq
   browse-pvc:
-    desc: Browse a PersistentVolumeClaim
-    summary: |
-      CLUSTER: Cluster to run command against (default: main)
-      NS: Namespace to browse PersistentVolumeClaims in (default: default)
-      CLAIM: PersistentVolumeClaim to browse (required)
+    desc: Mount a PVC to an temp container [CLUSTER=main] [NS=default] [CLAIM=required]
     interactive: true
-    cmd: kubectl browse-pvc --namespace {{.NS}} {{.CLAIM}}
+    cmd: kubectl browse-pvc --namespace {{.NS}} --image docker.io/library/alpine:latest {{.CLAIM}}
     vars:
-      CLUSTER: '{{.CLUSTER}}'
       NS: '{{.NS | default "default"}}'
     requires:
-      vars: ['CLAIM']
+      vars: [CLUSTER, CLAIM]
     preconditions:
       - kubectl --namespace {{.NS}} get persistentvolumeclaims {{.CLAIM}}
-  delete-failed-pods:
-    desc: Delete all pods with an Evicted/Failed/Succeeded status
-    summary: |
-      CLUSTER: Cluster to run command against (default: main)
-    cmds:
-      - for: ['Evicted', 'Failed', 'Succeeded']
-        cmd: kubectl delete pods --field-selector status.phase={{.ITEM}} -A --ignore-not-found=true
-    vars:
-      CLUSTER: '{{.CLUSTER}}'
+      - kubectl browse-pvc --version
+      - which kubectl
   sync-secrets:
-    desc: Sync ExternalSecret resources from provider
-    summary: |
-      CLUSTER: Cluster to run command against (default: homelab)
-      NS: Namespace to sync secret in (default: default)
-      SECRET: Secret to sync (default: all secrets)
-    cmd: |
-      {{if eq .SECRET ""}}
-        kubectl get externalsecret --all-namespaces --no-headers -A | awk '{print $1, $2}' \
-          | xargs --max-procs=2 -l bash -c 'kubectl -n $0 annotate externalsecret $1 force-sync=$(date +%s) --overwrite'
-      {{else}}
-        kubectl --namespace {{.NS}} annotate externalsecret {{.SECRET}} force-sync=$(date +%s) --overwrite
-      {{end}}
+    desc: Sync all ExternalSecrets [CLUSTER=main]
+    cmds:
+      - for: {var: SECRETS, split: "\n"}
+        cmd: kubectl --namespace {{splitList "," .ITEM | first}} annotate externalsecret {{splitList "," .ITEM | last}} force-sync="{{now | unixEpoch}}" --overwrite
     vars:
-      SECRET: '{{ .SECRET | default ""}}'
-      NS: '{{.NS | default "default"}}'
-      CLUSTER: '{{.CLUSTER | default "homelab"}}'
+      SECRETS:
+        sh: kubectl get externalsecret --all-namespaces --no-headers --output=jsonpath='{range .items[*]}{.metadata.namespace},{.metadata.name}{"\n"}{end}'
+    requires:
+      vars: [CLUSTER]
     preconditions:
-      - kubectl --namespace {{.NS}} get externalsecret {{.SECRET}}
+      - which kubectl
+  cleanse-pods:
+    desc: Cleanse pods with a Failed/Pending/Succeeded phase [CLUSTER=main]
+    cmds:
+      - for:
+          matrix:
+            PHASE: [Failed, Pending, Succeeded]
+        cmd: kubectl delete pods --all-namespaces --field-selector status.phase={{.ITEM.PHASE}} --ignore-not-found=true
+    requires:
+      vars: [CLUSTER]
+    preconditions:
+      - which kubectl
