--- a/.taskfiles/workstation/Taskfile.yaml
+++ b/.taskfiles/workstation/Taskfile.yaml
@@ -1,34 +1,44 @@
 # yaml-language-server: $schema=https://taskfile.dev/schema.json
-version: "3"
+version: '3'
 vars:
-  BREWFILE: "{{.ROOT_DIR}}/.taskfiles/workstation/Brewfile"
-  GENERIC_BIN_DIR: "{{.ROOT_DIR}}/.bin"
-  MINIJINJA_CMD: '{{ .HOME }}/.cargo/bin/minijinja-cli --env --trim-blocks --lstrip-blocks --autoescape=none --strict'
+  WORKSTATION_RESOURCES_DIR: '{{.ROOT_DIR}}/.taskfiles/workstation/resources'
 tasks:
-  direnv:
-    desc: Run direnv hooks
-    cmd: direnv allow .
-    status:
-      - "[[ $(direnv status --json | jq '.state.foundRC.allowed') == 0 ]]"
-      - "[[ $(direnv status --json | jq '.state.loadedRC.allowed') == 0 ]]"
-  venv:
-    desc: Set up virtual environment
+  brew:
+    desc: Set up Homebrew tools
     cmds:
-      - "uv venv"
-      - 'uv pip install --upgrade pip setuptools wheel'
-      - 'uv pip install --upgrade --requirement "{{.PIP_REQUIREMENTS_FILE}}"'
+      - brew bundle --file {{.WORKSTATION_RESOURCES_DIR}}/Brewfile
     sources:
-      - "{{.PIP_REQUIREMENTS_FILE}}"
+      - '{{.WORKSTATION_RESOURCES_DIR}}/Brewfile'
     generates:
-      - "{{.VIRTUAL_ENV}}/pyvenv.cfg"
+      - '{{.WORKSTATION_RESOURCES_DIR}}/Brewfile.lock.json'
     preconditions:
-      - {msg: "Missing Pip requirements file", sh: "test -f {{.PIP_REQUIREMENTS_FILE}}"}
-  deps:
-    desc: Install workstation dependencies
+      - which brew
+      - test -f {{.WORKSTATION_RESOURCES_DIR}}/Brewfile
+  golang:
+    desc: Set up Go tools
+    deps: [brew]
+    cmds: []
+    preconditions:
+      - which go
+  krew:
+    desc: Set up Krew tools
+    deps: [brew]
     cmds:
-      - brew bundle --file {{.BREWFILE}}
-      - curl -sSfL https://github.com/mitsuhiko/minijinja/releases/latest/download/minijinja-cli-installer.sh | sh
+      - kubectl krew install cert-manager cnpg browse-pvc rook-ceph view-secret
     preconditions:
-      - {msg: "Missing Homebrew", sh: "command -v brew"}
-      - {msg: "Missing Brewfile", sh: "test -f {{.BREWFILE}}"}
-      - {msg: "Missing uv", sh: "command -v uv"}
+      - kubectl krew version
+      - which kubectl
+  python:
+    desc: Set up Python tools
+    deps: [brew]
+    cmds:
+      - python3 -m venv {{.VIRTUAL_ENV}}
+      - '{{.VIRTUAL_ENV}}/bin/python3 -m pip install --upgrade pip'
+      - '{{.VIRTUAL_ENV}}/bin/python3 -m pip install --upgrade --requirement "{{.WORKSTATION_RESOURCES_DIR}}/requirements.txt"'
+    sources:
+      - '{{.WORKSTATION_RESOURCES_DIR}}/requirements.txt'
+    generates:
+      - '{{.VIRTUAL_ENV}}/pyvenv.cfg'
+    preconditions:
+      - which python3
+      - test -f {{.WORKSTATION_RESOURCES_DIR}}/requirements.txt
