--- a/k8s/apps/default/unpackerr/app/helmrelease.yaml
+++ b/k8s/apps/default/unpackerr/app/helmrelease.yaml
@@ -87,6 +87,6 @@ spec:
       media:
         type: nfs
         server: nas.internal
-        path: /mnt/nfs/media
+        path: /mnt/world/media
         globalMounts:
           - path: /media
