--- a/k8s/apps/default/calibre-web/app/helmrelease.yaml
+++ b/k8s/apps/default/calibre-web/app/helmrelease.yaml
@@ -74,7 +74,7 @@ spec:
       media:
         type: nfs
         server: nas.internal
-        path: /mnt/nfs/
+        path: /mnt/world/
         globalMounts:
           - path: /calibre
             subPath: calibre
