--- a/k8s/apps/default/cross-seed/app/helmrelease.yaml
+++ b/k8s/apps/default/cross-seed/app/helmrelease.yaml
@@ -85,7 +85,7 @@ spec:
       media:
         type: nfs
         server: nas.internal
-        path: /mnt/nfs/media
+        path: /mnt/world/media
         globalMounts:
           - path: /media/downloads
             subPath: downloads
