--- a/k8s/apps/default/komga/app/helmrelease.yaml
+++ b/k8s/apps/default/komga/app/helmrelease.yaml
@@ -76,7 +76,7 @@ spec:
       media:
         type: nfs
         server: nas.internal
-        path: /mnt/nfs/media
+        path: /mnt/world/media
         globalMounts:
           - path: /media/books
             subPath: books
