--- a/k8s/apps/default/plex/app/helmrelease.yaml
+++ b/k8s/apps/default/plex/app/helmrelease.yaml
@@ -126,7 +126,7 @@ spec:
       media:
         type: nfs
         server: nas.internal
-        path: /mnt/nfs/media
+        path: /mnt/world/media
         globalMounts:
           - path: /media
             readOnly: true
