--- a/k8s/apps/default/qbittorrent/app/helmrelease.yaml
+++ b/k8s/apps/default/qbittorrent/app/helmrelease.yaml
@@ -132,7 +132,7 @@ spec:
       media:
         type: nfs
         server: nas.internal
-        path: /mnt/nfs/media
+        path: /mnt/world/media
         globalMounts:
           - path: /media/downloads/torrents
             subPath: downloads/torrents
