--- a/k8s/apps/default/sonarr/app/helmrelease.yaml
+++ b/k8s/apps/default/sonarr/app/helmrelease.yaml
@@ -121,6 +121,6 @@ spec:
       media:
         type: nfs
         server: nas.internal
-        path: /mnt/nfs/media
+        path: /mnt/world/media
         globalMounts:
           - path: /media
