--- a/k8s/apps/default/stash/app/helmrelease.yaml
+++ b/k8s/apps/default/stash/app/helmrelease.yaml
@@ -68,7 +68,7 @@ spec:
       media:
         type: nfs
         server: nas.internal
-        path: /mnt/nfs/media
+        path: /mnt/world/media
         globalMounts:
           - path: /media
             subPath: downloads/torrents/complete/other
