--- a/k8s/apps/kyverno/kyverno/policies/volsync-movers.yaml
+++ b/k8s/apps/kyverno/kyverno/policies/volsync-movers.yaml
@@ -45,7 +45,7 @@ spec:
                   - name: repository
                     nfs:
                       server: nas.internal
-                      path: /mnt/nfs/backups/
+                      path: /mnt/world/backups/
     - name: mutate-volsync-dst-movers
       match:
         any:
@@ -70,4 +70,4 @@ spec:
                   - name: repository
                     nfs:
                       server: nas.internal
-                      path: /mnt/nfs/backups/
+                      path: /mnt/world/backups/
