--- a/k8s/apps/default/radarr/ks.yaml
+++ b/k8s/apps/default/radarr/ks.yaml
@@ -23,3 +23,7 @@ spec:
   postBuild:
     substitute:
       APP: *app
+      VOLSYNC_ACCESSMODES: ReadWriteMany
+      VOLSYNC_STORAGECLASS: ceph-filesystem
+      VOLSYNC_SNAPSHOTCLASS: csi-ceph-filesystem
+      VOLSYNC_SNAPSHOT_ACCESSMODES: ReadOnlyMany
