feat: use volsync replication and restore yolo

--- a/k8s/apps/default/prowlarr/app/pvc.yaml
+++ b/k8s/apps/default/prowlarr/app/pvc.yaml
@@ -3,8 +3,8 @@ kind: PersistentVolumeClaim
 metadata:
   name: prowlarr
 spec:
-  accessModes: ["ReadWriteMany"]
+  accessModes: ["ReadWriteOnce"]
   resources:
     requests:
-      storage: 15Gi
+      storage: 5Gi
   storageClassName: ceph-filesystem
