feat: add delete-pvc task

--- a/.taskfiles/kubernetes/Taskfile.yaml
+++ b/.taskfiles/kubernetes/Taskfile.yaml
@@ -49,3 +49,15 @@ tasks:
       vars: [CLUSTER]
     preconditions:
       - which kubectl
+  delete-pvc:
+    desc: Delete pvc [CLUSTER=main] [NS=default] [CLAIM=required]
+    cmds:
+      - kubectl --namespace {{.NS}} delete pvc {{.CLAIM}} --grace-period=0 --force
+      - kubectl --namespace {{.NS}} patch pvc {{.CLAIM}} -p '{"metadata":{"finalizers":null}}'
+    vars:
+      NS: '{{.NS | default "default"}}'
+    requires:
+      vars: [CLUSTER, CLAIM]
+    preconditions:
+      - kubectl --namespace {{.NS}} get persistentvolumeclaims {{.CLAIM}}
+      - which kubectl
