feat: add calibre

--- a/k8s/apps/default/kustomization.yaml
+++ b/k8s/apps/default/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
   - ./autobrr/ks.yaml
   - ./radarr/ks.yaml
   - ./sonarr/ks.yaml
+  - ./calibre/ks.yaml
   - ./calibre-web/ks.yaml
   - ./readarr/ks.yaml
   - ./flaresolverr/ks.yaml
