fix: nfs mount maybe

--- a/k8s/apps/default/slskd/app/helmrelease.yaml
+++ b/k8s/apps/default/slskd/app/helmrelease.yaml
@@ -126,7 +126,7 @@ spec:
       media:
         type: nfs
         server: nas.internal
-        path: /mnt/world
+        path: /mnt/world/media
         globalMounts:
           - path: /media/downloads/soulseek
-            subPath: media/downloads/soulseek
+            subPath: downloads/soulseek
