--- a/k8s/apps/default/calibre/app/helmrelease.yaml
+++ b/k8s/apps/default/calibre/app/helmrelease.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app calibre-web
+  name: &app calibre
 spec:
   chart:
     spec:
@@ -16,7 +16,7 @@ spec:
   interval: 30m
   values:
     controllers:
-      calibre-web:
+      calibre:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
