--- a/k8s/apps/default/calibre/app/helmrelease.yaml
+++ b/k8s/apps/default/calibre/app/helmrelease.yaml
@@ -23,7 +23,7 @@ spec:
           app:
             args:
               - --port=8081
-              - /calibre
+              - /config/calibre
             image:
               repository: ghcr.io/vaskozl/calibre
               tag: 7.17.0@sha256:8f752521f9be448206d1f30cb6d81ef2f2f0e5d078a6f0a878ca3c20f3d09c0d
@@ -78,5 +78,5 @@ spec:
         server: nas.internal
         path: /mnt/world/
         globalMounts:
-          - path: /calibre
+          - path: /config/calibre
             subPath: calibre
