--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -1,50 +1,29 @@
 # yaml-language-server: $schema=https://taskfile.dev/schema.json
-version: "3"
+version: '3'
+set: [pipefail]
+shopt: [globstar]
 vars:
-  # Directories
-  BOOTSTRAP_DIR: "{{.ROOT_DIR}}/bootstrap"
-  KUBERNETES_DIR: "{{.ROOT_DIR}}/k8s"
-  PRIVATE_DIR: "{{.ROOT_DIR}}/.private"
-  SCRIPTS_DIR: "{{.ROOT_DIR}}/scripts"
-  # Cluster
-  CLUSTER: '{{.CLUSTER | default "homelab"}}'
-  # Files
-  AGE_FILE: "{{.ROOT_DIR}}/age.key"
-  BOOTSTRAP_CONFIG_FILE: "{{.ROOT_DIR}}/config.yaml"
-  KUBECONFIG_FILE: "{{.ROOT_DIR}}/kubeconfig"
-  MAKEJINJA_CONFIG_FILE: "{{.ROOT_DIR}}/makejinja.toml"
-  PIP_REQUIREMENTS_FILE: "{{.ROOT_DIR}}/requirements.txt"
-  SOPS_CONFIG_FILE: "{{.ROOT_DIR}}/.sops.yaml"
-  # Binaries
-  PYTHON_BIN: python3
+  CLUSTER: '{{.CLUSTER | default "main"}}'
+  CLUSTER_DIR: '{{.ROOT_DIR}}/k8s'
 env:
-  KUBECONFIG: "{{.KUBECONFIG_FILE}}"
-  PYTHONDONTWRITEBYTECODE: "1"
-  SOPS_AGE_KEY_FILE: "{{.AGE_FILE}}"
-  VIRTUAL_ENV: "{{.ROOT_DIR}}/.venv"
+  GOPATH: '{{.ROOT_DIR}}/.go'
+  KUBECONFIG: '{{.CLUSTER_DIR}}/kubeconfig'
+  MINIJINJA_CONFIG_FILE: '{{.ROOT_DIR}}/.minijinja.toml'
+  SOPS_AGE_KEY_FILE: '{{.ROOT_DIR}}/age.key'
+  TALOSCONFIG: '{{.CLUSTER_DIR}}/talosconfig'
+  VIRTUAL_ENV: '{{.ROOT_DIR}}/.venv'
 includes:
   b: .taskfiles/bootstrap
   k: .taskfiles/kubernetes
   t: .taskfiles/talos
-  s: .taskfiles/sops
-  w: .taskfiles/workstation
   v: .taskfiles/volsync
+  w: .taskfiles/workstation
 tasks:
-  default: task --list
-  init:
-    desc: Initialize configuration files
-    cmds:
-      - cp -n {{.BOOTSTRAP_CONFIG_FILE | replace ".yaml" ".sample.yaml"}} {{.BOOTSTRAP_CONFIG_FILE}}
-      - cmd: echo === Configuration file copied ===
-      - cmd: echo Proceed with updating the configuration files...
-      - cmd: echo {{.BOOTSTRAP_CONFIG_FILE}}
-    status:
-      - test -f {{.BOOTSTRAP_CONFIG_FILE}}
+  default:
+    cmd: task --list
     silent: true
-  configure:
-    desc: Configure repository from bootstrap vars
-    prompt: Any conflicting config in the kubernetes directory will be overwritten... continue?
-    deps: ["workstation:direnv", "workstation:venv", "sops:age-keygen", "init"]
-    cmds:
-      - task: template
-      - task: sops:encrypt
+  # Ref: https://github.com/go-task/task/issues/608
+  noop:
+    internal: true
+    silent: true
+    cmd: noop() { :; }
