--- a/k8s/apps/default/calibre/app/helmrelease.yaml
+++ b/k8s/apps/default/calibre/app/helmrelease.yaml
@@ -29,15 +29,17 @@ spec:
         initContainers:
           init-calibre:
             image:
-              command: ["calibredb", "add", "/config", "--automerge"]
               repository: ghcr.io/vaskozl/calibre
               tag: 7.17.0@sha256:8f752521f9be448206d1f30cb6d81ef2f2f0e5d078a6f0a878ca3c20f3d09c0d
+            command: ["calibredb", "add", "/config", "--automerge"]
+            repository: ghcr.io/vaskozl/calibre
+            tag: 7.17.0@sha256:8f752521f9be448206d1f30cb6d81ef2f2f0e5d078a6f0a878ca3c20f3d09c0d
         containers:
           app:
-            args: ["--port=8080", "/config", "--enable-local-write"]
             image:
               repository: ghcr.io/vaskozl/calibre
               tag: 7.17.0@sha256:8f752521f9be448206d1f30cb6d81ef2f2f0e5d078a6f0a878ca3c20f3d09c0d
+            args: ["--port=8080", "/config", "--enable-local-write"]
             probes:
               liveness:
                 enabled: true
