fix: remove wildcard

--- a/k8s/apps/default/calibre/app/helmrelease.yaml
+++ b/k8s/apps/default/calibre/app/helmrelease.yaml
@@ -31,7 +31,7 @@ spec:
             image:
               repository: ghcr.io/vaskozl/calibre
               tag: 7.17.0@sha256:8f752521f9be448206d1f30cb6d81ef2f2f0e5d078a6f0a878ca3c20f3d09c0d
-            command: ["calibredb", "add", "/config/*", "--automerge", "ignore", "--with-library", "/config"]
+            command: ["calibredb", "add", "/config", "--automerge", "ignore", "--with-library", "/config"]
         containers:
           app:
             image:
